--- a/Proyecto.Servicios.Services/Proyecto.Servicios.Services.csproj
+++ b/Proyecto.Servicios.Services/Proyecto.Servicios.Services.csproj
@@ -82,6 +82,12 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Proyecto.Servicios.Model.Service\Proyecto.Servicios.Model.Service.csproj">
+      <Project>{fd895c09-77dc-4455-ba13-5d1354482cdf}</Project>
+      <Name>Proyecto.Servicios.Model.Service</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
