--- a/Proyecto.Servicios.IRepository/Proyecto.Servicios.IRepository.csproj
+++ b/Proyecto.Servicios.IRepository/Proyecto.Servicios.IRepository.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{52EB19FB-A4E2-4E1A-B0EC-C36ECF52E681}</ProjectGuid>
+    <ProjectGuid>{D9D69FA7-6E78-4AAF-B504-AAF822896123}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>Proyecto.Servicios.IDomain</RootNamespace>
-    <AssemblyName>Proyecto.Servicios.IDomain</AssemblyName>
+    <RootNamespace>Proyecto.Servicios.IRepository</RootNamespace>
+    <AssemblyName>Proyecto.Servicios.IRepository</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -49,7 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IUsuarioDomain.cs" />
+    <Compile Include="IUsuarioRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -71,10 +71,6 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Proyecto.Servicios.Model.Service\Proyecto.Servicios.Model.Service.csproj">
-      <Project>{fd895c09-77dc-4455-ba13-5d1354482cdf}</Project>
-      <Name>Proyecto.Servicios.Model.Service</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Proyecto.Servicios.Model\Proyecto.Servicios.Model.csproj">
       <Project>{882925d5-fb10-47d0-b80e-953fe9c48f27}</Project>
       <Name>Proyecto.Servicios.Model</Name>
