--- a/Proyecto.Servicios.Services/Proyecto.Servicios.Services.csproj
+++ b/Proyecto.Servicios.Services/Proyecto.Servicios.Services.csproj
@@ -42,6 +42,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Proyecto.Base, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>References\Proyecto.Base.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -61,6 +65,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="References\Proyecto.Base.dll" />
     <Content Include="Service.svc" />
     <Content Include="Web.config" />
   </ItemGroup>
