Configuracion de WebConfig

--- a/Proyecto.Servicios.Services/Web.config
+++ b/Proyecto.Servicios.Services/Web.config
@@ -1,12 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-
+  <configSections>
+    <section name="factoryConfiguration" type="Proyecto.Base.Factory.Configuration.FactoryConfiguration" />
+  </configSections>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
   </appSettings>
+  <connectionStrings>
+    <add name="CnnStringSQL" connectionString="Data " providerName="System.Data.SqlClient"/>
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2"/>
+    <httpModules>
+      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web"/>
+    </httpModules>
   </system.web>
   <system.serviceModel>
     <behaviors>
@@ -25,12 +33,24 @@
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
   </system.serviceModel>
   <system.webServer>
-    <modules runAllManagedModulesForAllRequests="true"/>
+    <modules runAllManagedModulesForAllRequests="true">
+    <remove name="ApplicationInsightsWebTracking"/>
+    <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web"
+      preCondition="managedHandler"/>
+    </modules>
     <!--
         Para examinar el directorio raíz de la aplicación web durante la depuración, establezca el valor siguiente en true.
         Establézcalo en false antes de la implementación para evitar revelar información sobre la carpeta de aplicación web.
       -->
     <directoryBrowse enabled="true"/>
+    <validation validateIntegratedModeConfiguration="false"/>
   </system.webServer>
-
+  <factoryConfiguration>
+    <factorySettings>
+      <!--Repository-->
+      <add typeName="Proyecto.Servicios.Repository.UsuarioRepository" libraryName="Proyecto.Servicios.Repository" contractName="IUsuarioRepository" />
+      <!--Domain-->
+      <add typeName="Proyecto.Servicios.Domain.UsuarioDomain" libraryName="Proyecto.Servicios.Domain" contractName="IUsuarioDomain" />
+    </factorySettings>
+  </factoryConfiguration>
 </configuration>
